# tapwatch

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  font.rs  iterm2.rs  key_spritesheet.rs  main.rs  sprite.rs  spritesheet.rs  ui.rs
src/app/: keys.rs  mod.rs  spritesheet.rs  state.rs  terminal.rs  ui.rs
