[package]
name = "tapwatch"
version = "0.1.0"
edition = "2021"
authors = ["wooyukit"]
description = "A terminal-based typing companion app with an animated dog character that reacts to your keystrokes"
license = "MIT"
repository = "https://github.com/wooyukit/tapwatch"
homepage = "https://github.com/wooyukit/tapwatch"
readme = "README.md"
keywords = ["terminal", "typing", "animation", "tui", "keyboard"]
categories = ["command-line-utilities", "visualization"]
exclude = ["assets/*.png"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
rdev = "0.5"
base64 = "0.22"
once_cell = "1.19"
image = "0.25"
tui-big-text = "0.7"
rand = "0.8"
libc = "0.2"
tachyonfx = "0.9"
